<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.ass3.assignment3.SearchResultsActivity">

    <TextView
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_desc"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/keywordInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/search_hint"
        android:ems="10"/>

    <Button
        android:id="@+id/searchEvent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/button_search" />

    <ListView
        android:id="@+id/resultList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
