<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.ass3.assignment3.EvFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addItem"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/button_add_item"
                style="@style/Add"/>

            <Button
                android:id="@+id/editEvent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_edit_event"
                style="@style/Edit"/>

            <Button
                android:id="@+id/deleteEvent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/button_delete_event"
                style="@style/Delete"/>

        </LinearLayout>

    <ListView
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"/>
    </LinearLayout>
</FrameLayout>
